replace javax to jakarta, upgrade dependencies in pom.xml, remove deprecated method or annotation